mule-user-guide/v/3.7/about-configuration-builders.adoc
= About Configuration Builders
:keywords: configuration, deploy, esb, mule

The configuration builder is responsible for creating the configuration that's used at run time from the configuration files you provide. Mule ESB provides two standard configuration builders, or you can create your own.

== SpringXmlConfigurationBuilder

The default configuration builder used to configure Mule is the SpringXmlConfigurationBuilder. This configuration builder uses Spring to configure Mule based on one or more XML files leveraging custom Mule namespaces. For more information, see link:/mule-user-guide/v/3.7/about-the-xml-configuration-file[About the XML Configuration File].

== ScriptConfigurationBuilder

This configuration builder allows a JSR-223 compliant script engine such as Groovy or Jython to configure Mule. For more information, see link:/mule-user-guide/v/3.7/scripting-module-reference[Scripting Module Reference].

== Custom Configuration Builders

You can easily create your own custom configuration builder by implementing the link:http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/api/config/ConfigurationBuilder.html[ConfigurationBuilder] interface, which has a method `configure`. Typically, you call `configure(MuleContext muleContext.getRegistry())` to get access to Mule's internal registry, which contains the configuration information, and to register objects and other elements.

In most cases, you will want to inherit from the class
link:http://www.mulesoft.org/docs/site/3.7.0/apidocs/org/mule/config/builders/AbstractResourceConfigurationBuilder.html[AbstractResourceConfigurationBuilder]
, which makes any configuration files specified on the command line available in an instance variable called `configResources`.

== Specifying the Configuration Builder

AutoConfigurationBuilder is the default configuration builder. If you want to use another configuration builder, you can specify it in the link:/mule-user-guide/v/3.7/mule-application-deployment-descriptor[deployment descriptor] of an application.

You can also specify the configuration builder as a parameter to the MuleContextFactory when starting Mule programatically:

[source,java, linenums]
----
MuleContext context = new DefaultMuleContextFactory().createMuleContext(new ScriptConfigurationBuilder("mule-config.groovy"));
context.start();
----

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
